Configuração do WebConfig atualizada.